# ChangeLog for dev-perl/gnome2-wnck
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/gnome2-wnck/ChangeLog,v 1.51 2011/09/04 18:20:22 tove Exp $

*gnome2-wnck-0.160.0 (04 Sep 2011)

  04 Sep 2011; Torsten Veller <tove@gentoo.org> +gnome2-wnck-0.160.0.ebuild:
  Maintenance. Use CPAN mirrors. Change version scheme

  21 Mar 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  gnome2-wnck-0.16.ebuild:
  Fix slot-deps on gnome libs

  22 Sep 2008; Torsten Veller <tove@gentoo.org> -files/window_close_patch,
  -gnome2-wnck-0.14.ebuild, gnome2-wnck-0.16.ebuild:
  Fix LICENSE. Cleanup

  25 May 2008; Markus Meier <maekke@gentoo.org> gnome2-wnck-0.16.ebuild:
  amd64 stable, bug #204386

  22 May 2008; Raúl Porcel <armin76@gentoo.org> gnome2-wnck-0.16.ebuild:
  ia64 stable wrt #204386

  21 May 2008; Christian Faulhammer <opfer@gentoo.org>
  gnome2-wnck-0.16.ebuild:
  stable x86, bug 204386

  21 May 2008; nixnut <nixnut@gentoo.org> gnome2-wnck-0.16.ebuild:
  Stable on ppc wrt bug 204386

  21 May 2008; Ferris McCormick <fmccor@gentoo.org> gnome2-wnck-0.16.ebuild:
  Sparc stable, Bug #204386.

  05 May 2008; Samuli Suominen <drac@gentoo.org> -gnome2-wnck-0.11.ebuild,
  -gnome2-wnck-0.12.ebuild, -gnome2-wnck-0.13.ebuild,
  gnome2-wnck-0.14.ebuild:
  Move pkgconfig to DEPEND wrt #217278.

*gnome2-wnck-0.16 (08 Apr 2008)

  08 Apr 2008; Torsten Veller <tove@gentoo.org> +gnome2-wnck-0.16.ebuild:
  Version bump. Closes #208810 and #204386.

  06 Jul 2007; Raúl Porcel <armin76@gentoo.org> gnome2-wnck-0.14.ebuild:
  ia64 stable

  30 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  gnome2-wnck-0.13.ebuild, gnome2-wnck-0.14.ebuild:
  Updating deps, bug 152205

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> gnome2-wnck-0.14.ebuild:
  Stable on x86, bug #169152.

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  gnome2-wnck-0.14.ebuild:
  Stable on ppc.

  25 Nov 2006; Michael Cummings <mcummings@gentoo.org>