@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gnome2-wnck/Attic/gnome2-wnck-0.160.0.ebuild,v 1.1 2011/09/04 18:20:22 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gnome2-wnck/Attic/gnome2-wnck-0.160.0.ebuild,v 1.2 2012/02/24 10:50:22 ago Exp $
 
 EAPI=4
 
@@ -15,7 +15,7 @@ HOMEPAGE="http://gtk2-perl.sourceforge.net/ ${HOMEPAGE}"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~ppc ~sparc ~x86"
+KEYWORDS="amd64 ~ia64 ~ppc ~sparc ~x86"
 IUSE=""
 
 RDEPEND=">=dev-perl/glib-perl-1.180.0
