@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/gnome2-wnck
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/gnome2-wnck/ChangeLog,v 1.51 2011/09/04 18:20:22 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/gnome2-wnck/ChangeLog,v 1.52 2012/02/24 10:50:22 ago Exp $
+
+  24 Feb 2012; Agostino Sarubbo <ago@gentoo.org> gnome2-wnck-0.160.0.ebuild:
+  Stable for amd64, wrt bug #400291
 
 *gnome2-wnck-0.160.0 (04 Sep 2011)
 
